--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,20 @@
 {
+    "version": 2,
+    "builds": [
+        {
+            "src": "frontend/staff-view/homeGrid.html",
+            "use": "@vercel/static"
+        }
+    ],
     "routes": [
         {
             "src": "/",
-            "dest": "/frontend/STAFF%20VIEW/homeGrid.html"
+            "dest": "/frontend/staff-view/homeGrid.html"
         },
         {
             "src": "/(.*)",
             "status": 404,
-            "dest": "frontend/STAFF%20VIEW/homeGrid.html"
+            "dest": "frontend/staff-view/homeGrid.html"
         }
     ]
 }
