--- a/api/package.json
+++ b/api/package.json
@@ -2,9 +2,10 @@
   "name": "back-end",
   "version": "1.0.0",
   "main": "server.js",
-    "scripts": {
+  "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "accepts": "^2.0.0",
@@ -90,6 +91,7 @@
     "negotiator": "^1.0.0",
     "node-addon-api": "^8.3.1",
     "node-gyp-build": "^4.8.4",
+    "nodemon": "^3.1.10",
     "normalize-path": "^3.0.0",
     "object-assign": "^4.1.1",
     "object-inspect": "^1.13.4",
@@ -105,7 +107,6 @@
     "qs": "^6.14.0",
     "range-parser": "^1.2.1"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
