--- a/api/package.json
+++ b/api/package.json
@@ -46,6 +46,7 @@
     "finalhandler": "^2.1.0",
     "forwarded": "^0.2.0",
     "fresh": "^2.0.0",
+    "fullcalendar": "^6.1.18",
     "function-bind": "^1.1.2",
     "get-intrinsic": "^1.3.0",
     "get-proto": "^1.0.1",
