--- a/api/package.json
+++ b/api/package.json
@@ -90,6 +90,7 @@
     "mpath": "^0.9.0",
     "mquery": "^5.0.0",
     "ms": "^2.1.3",
+    "multer": "^2.0.2",
     "negotiator": "^1.0.0",
     "node-addon-api": "^8.3.1",
     "node-gyp-build": "^4.8.4",
@@ -107,7 +108,8 @@
     "pstree.remy": "^1.1.8",
     "punycode": "^2.3.1",
     "qs": "^6.14.0",
-    "range-parser": "^1.2.1"
+    "range-parser": "^1.2.1",
+    "sharp": "^0.34.3"
   },
   "keywords": [],
   "author": "",
